--- a/MQTTFirstLook broker c#/MQTTFirstLook.Client/MQTTFirstLook.Client.csproj
+++ b/MQTTFirstLook broker c#/MQTTFirstLook.Client/MQTTFirstLook.Client.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>MQTTFirstLook.Client.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
